--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
 
 server:
   port: 8088
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: webrtc
+    key-store-type: PKCS12
+    key-alias: webrtc
