--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mongo:
     image: mongo
-    container_name: mongo-db
+    container_name: mongo_db
     ports:
       - 27017:27017
     volumes:
@@ -17,8 +17,6 @@ services:
     restart: always
     ports:
       - 8081:8081
-    volumes:
-      - mongoexpress:/data
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=root
@@ -34,7 +32,7 @@ services:
     ports:
       - 8088:8088
     environment:
-      - DB_HOST=mongo-db
+      - DB_HOST=mongo_db
       - DB_PORT=27017
       - DB_NAME=missenger
       - DB_USERNAME=root
