--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
+version: '5'
 services:
   mongo:
-    image: mongo
-    container_name: mongo_db
+    image: mongo:latest
+    container_name: mongo
     ports:
       - 27017:27017
     volumes:
@@ -10,7 +11,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
     networks:
-      springboot-mongo-net:
+      shared-net:
   mongo-express:
     image: mongo-express
     container_name: mongo_express
@@ -21,18 +22,22 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=root
       - ME_CONFIG_MONGODB_SERVER=mongodb
+    networks:
+      shared-net:
   missenger:
     container_name: missenger
     build:
       context: ./
       dockerfile: Dockerfile
+    links:
+      - mongo
     depends_on:
       - mongo
     restart: on-failure
     ports:
       - 8088:8088
     environment:
-      - DB_HOST=mongo_db
+      - DB_HOST=localhost
       - DB_PORT=27017
       - DB_NAME=missenger
       - DB_USERNAME=root
@@ -43,4 +48,4 @@ services:
 volumes:
   mongo: {}
 networks:
-  springboot-mongo-net:
+  shared-net:
