--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=root
-      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_SERVER=mongo
     networks:
       shared-net:
   missenger:
@@ -37,14 +37,14 @@ services:
     ports:
       - 8088:8088
     environment:
-      - DB_HOST=localhost
+      - DB_HOST=mongo
       - DB_PORT=27017
       - DB_NAME=missenger
       - DB_USERNAME=root
       - DB_PASSWORD=root
       - SERVER_PORT=8088
     networks:
-      springboot-mongo-net:
+      shared-net:
 volumes:
   mongo: {}
 networks:
