Fix: Error with video

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '5'
+version: '3.3'
 services:
   mongo:
     image: mongo:latest
@@ -6,7 +6,7 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - /opt/mongo_data:/var/lib/mongo
+      - /opt/mongo_data:/data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
