--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
       host: ${DB_HOST:localhost}
       port: ${DB_PORT:27017}
       database: ${DB_NAME:missenger}
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 server:
   port: ${SERVER_PORT:8088}
